--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 
-                <li><a href="mega.html ">SORTING</a></li>
+                <li><a href="sorting.html ">SORTING</a></li>
                 <li><a href="arrays.html">ARRAY</a></li>
                 <li><a href="2d_arrays.html">2D-ARRAYS</a></li>
                 <li><a href="recurssion.html">RECURSSION</a></li>
@@ -29,10 +29,6 @@
                 <li><a href="stacks.html">STACKS</a></li>
                 <li><a href="searchalgorith.html">SEARCH ALGORITHM</a></li>
                 <li><a href="string.html">STRINGS</a></li>
-                <div class="searchbox">
-                    <input type="text" name="searchbox" id="searchbox" placeholder="Search">
-                </div>
-
             </ul>
    
 
